--- a/PythonAvance/templates/png.html
+++ b/PythonAvance/templates/png.html
@@ -17,7 +17,7 @@ block head %} {{ super() }} {% endblock %} {% block page_content %} {% include
     <p class="card-text">
       Evolution des températures max en France depuis 1996
     </p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a href="png/annee_chaudes" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
 
