add base page pgn graph

--- a/PythonAvance/templates/png.html
+++ b/PythonAvance/templates/png.html
@@ -1,32 +1,16 @@
 {% extends "base.html" %} {% block title %}FastAPI Starter{% endblock %} {%
 block head %} {{ super() }} {% endblock %} {% block page_content %} {% include
 'include/sidebar.html' %}
-<h1>Analyse de données</h1>
-<p>azedrt</p>
 
-<!-- <div class="card" style="width: 18rem">
-  <img
-    src="https://hips.hearstapps.com/hmg-prod/images/jokes-for-kids-14-1631055180.png?crop=1xw:0.6666666666666666xh;center,top&resize=980:*"
-    class="card-img-top"
-    alt="notFound"
-  />
-  <div class="card-body">
-    <h5 class="card-title">
-      Quelles sont les 10 années les plus chaudes depuis 1996 ?
-    </h5>
-    <p class="card-text">
-      Evolution des températures max en France depuis 1996
-    </p>
-    <a href="png/annee_chaudes" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div> -->
+<h1 class="display-1">{{data.page}}</h1>
+<h6>{{data.soustitre}}</h6>
 
 <p>_______________________</p>
 <div class="row row-cols-1 row-cols-md-2 g-4">
   <div class="col">
     <div class="card">
       <img
-        src="https://hips.hearstapps.com/hmg-prod/images/jokes-for-kids-14-1631055180.png?crop=1xw:0.6666666666666666xh;center,top&resize=980:*"
+        src="https://media.discordapp.net/attachments/1079722540152410154/1084760890966024213/mean_temp.png?width=800&height=600"
         class="card-img-top"
         alt="notFound"
       />
@@ -37,22 +21,65 @@ block head %} {{ super() }} {% endblock %} {% block page_content %} {% include
         <p class="card-text">
           Evolution des températures max en France depuis 1996
         </p>
+        <a href="png/annee_chaudes" class="btn btn-primary">Plus de détail</a>
       </div>
     </div>
   </div>
+
   <div class="col">
     <div class="card">
-      <img src="..." class="card-img-top" alt="..." />
+      <img
+        src="https://hips.hearstapps.com/hmg-prod/images/jokes-for-kids-14-1631055180.png?crop=1xw:0.6666666666666666xh;center,top&resize=980:*"
+        class="card-img-top"
+        alt="notFound"
+      />
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">
-          This is a longer card with supporting text below as a natural lead-in
-          to additional content. This content is a little bit longer.
-        </p>
+        <h5 class="card-title">
+          Observe-t-on un un changement de températures dans le temps ?
+        </h5>
+        <p class="card-text">Analyse des températures de 96 à aujourd'hui</p>
+        <a href="png/changement_temp" class="btn btn-primary">Plus de détail</a>
       </div>
     </div>
   </div>
-  {{data.page}}
-  <h6>{{data.soustitre}}</h6>
-  {% endblock %} {% block scripts %} {{ super() }} {% endblock %}
+
+  <div class="col">
+    <div class="card">
+      <img
+        src="https://hips.hearstapps.com/hmg-prod/images/jokes-for-kids-14-1631055180.png?crop=1xw:0.6666666666666666xh;center,top&resize=980:*"
+        class="card-img-top"
+        alt="notFound"
+      />
+      <div class="card-body">
+        <h5 class="card-title">
+          Il y a-t-il beaucoup de jours depuis 1996 où les éoliennes n'ont pas
+          pu tourner ?
+        </h5>
+        <p class="card-text">Analyse des données de vents</p>
+        <a href="png/vents" class="btn btn-primary">Plus de détail</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col">
+    <div class="card">
+      <img
+        src="https://hips.hearstapps.com/hmg-prod/images/jokes-for-kids-14-1631055180.png?crop=1xw:0.6666666666666666xh;center,top&resize=980:*"
+        class="card-img-top"
+        alt="notFound"
+      />
+      <div class="card-body">
+        <h5 class="card-title">
+          Observe-t-on des changements forts de températures au sein d'une
+          semaine ?
+        </h5>
+        <p class="card-text">Analyse des températures de 96 à aujourd'hui</p>
+        <a href="png/changement_semaine" class="btn btn-primary"
+          >Plus de détail</a
+        >
+      </div>
+    </div>
+  </div>
+
+  {{data.page}} {% endblock %} {% block scripts %} {{ super() }} {% endblock %}
 </div>
