--- a/PythonAvance/templates/page.html
+++ b/PythonAvance/templates/page.html
@@ -8,7 +8,8 @@ block head %} {{ super() }} {% endblock %} {% block page_content %} {% include
 <h3>
   Ce site a pour but d'expliquer des données métérologiques<small
     class="text-muted"
-    >Nous ne sommes pas métérologue</small
+  >
+    ⚠️ :Nous ne sommes pas métérologues</small
   >
 </h3>
 <br />
@@ -48,4 +49,11 @@ block head %} {{ super() }} {% endblock %} {% block page_content %} {% include
     </dd>
   </dl>
 </div>
-{{data.page}} {% endblock %} {% block scripts %} {{ super() }} {% endblock %}
+<br />
+<br />
+<div style="text-align: center">
+  <button type="button" class="btn btn-success btn-lg">
+    <a href="/page/png" class="btn btn-success">Accéder à nos analyses</a>
+  </button>
+</div>
+{% endblock %} {% block scripts %} {{ super() }} {% endblock %}
