--- a/tests/templates/include/sidebar.html
+++ b/tests/templates/include/sidebar.html
@@ -5,44 +5,20 @@
   </div>
 
   <div class="sidebar-header">
-    <h3>FastAPI Web Starter</h3>
+    <h3>Menu</h3>
   </div>
 
   <ul class="list-unstyled components">
     <li class="active">
-      <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false"
-        >Home</a
-      >
-      <ul class="collapse list-unstyled" id="homeSubmenu">
         <li>
           <a href="/">Home</a>
         </li>
         <li>
-          <a href="https://google.com">Google</a>
+          <a href="/page/png">Analyse de données</a>
         </li>
-      </ul>
-    </li>
-    <li>
-      <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false"
-        >Pages</a
-      >
-      <ul class="collapse list-unstyled" id="pageSubmenu">
         <li>
           <a href="/page/about">About</a>
         </li>
-        <li>
-          <a href="/page/info">Information</a>
-        </li>
-        <li>
-          <a href="/page/png">Analyse de données</a>
-        </li>
-      </ul>
-    </li>
-    <!-- <li>
-      <a href="/page/portfolio">Portfolio</a>
-    </li> -->
-    <li>
-      <a href="/page/contact">Contact</a>
     </li>
   </ul>
 </nav>
