--- a/PythonAvance/templates/png.html
+++ b/PythonAvance/templates/png.html
@@ -4,13 +4,11 @@ block head %} {{ super() }} {% endblock %} {% block page_content %} {% include
 
 <h1 class="display-1">{{data.page}}</h1>
 <h6>{{data.soustitre}}</h6>
-
-<p>_______________________</p>
 <div class="row row-cols-1 row-cols-md-2 g-4">
   <div class="col">
     <div class="card">
       <img
-        src="https://media.discordapp.net/attachments/1079722540152410154/1084760890966024213/mean_temp.png?width=800&height=600"
+        src="..\static\picture\annees_chaudes.png"
         class="card-img-top"
         alt="notFound"
       />
